# mcp-logger

./: README.md  pyproject.toml
src/: logger.py
src/mcp_logger/: db.py  server.py
